<resources>
    <string name="app_name">QLive</string>
    <string name="title_push">Push</string>
    <string name="title_play">Play</string>
    <string name="title_conv">Conv</string>
    <string name="title_about">About</string>

    <string name="app_exit">Press again to exit the program</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="cancel">Canel</string>
    <string name="finish">Finish</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="more">More</string>
    <string name="setting">Setting</string>
    <string name="wait">Wait</string>

    <string name="toast_1000">Connecting to server</string>
    <string name="toast_1001">Connecting to server</string>
    <string name="toast_1002">Connecting to server</string>
    <string name="toast_1003">Connecting to server</string>
    <string name="toast_1004">Connecting to server</string>
    <string name="toast_1005">Connecting to server</string>

    <string name="toast_2000">Connecting to server</string>
    <string name="toast_2001">Connect successfully and start streaming</string>
    <string name="toast_2002">Streaming failed</string>
    <string name="toast_2003">Connecting to server</string>
    <string name="toast_2004">Streaming ended</string>
    <string name="toast_2005">network anomaly</string>

    <string name="push_settings">Push Settings</string>
    <string name="stream_url">Stream URL</string>
    <string name="push_start">Start Push</string>
    <string name="push_wait">Connection</string>
    <string name="push_stop">Stop Push</string>
    <string name="video_settings">Video Settings</string>
    <string name="camera_postion">Camera Postion</string>
    <string-array name="camera_postion_list_titles">
        <item>Back</item>
        <item>Front</item>
    </string-array>
    <string-array name="camera_postion_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="camera_front_mirror">Camera Front Mirror</string>
    <string name="video_orientation">Video Orientation</string>
    <string-array name="video_orientation_list_titles">
        <item>Portrait</item>
        <item>Landscape Right</item>
        <item>Landscape Left</item>
    </string-array>
    <string-array name="video_orientation_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="video_front_mirror">Video Front Mirror</string>
    <string name="video_resolution">Video Resolution</string>
    <string-array name="video_resolution_list_titles">
        <item>16x9_270</item>
        <item>16x9_360</item>
        <item>16x9_480</item>
        <item>16x9_540</item>
        <item>16x9_720</item>
    </string-array>
    <string-array name="video_resolution_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string name="video_profile">Video Profile</string>
    <string-array name="video_profile_list_titles">
        <item>H.264 Baseline</item>
        <item>H.264 Main</item>
        <item>H.264 High</item>
    </string-array>
    <string-array name="video_profile_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="video_keyframe_interval">Video Keyframe Interval</string>
    <string-array name="video_keyframe_interval_list_titles">
        <item>1s</item>
        <item>2s</item>
        <item>3s</item>
        <item>4s</item>
        <item>5s</item>
    </string-array>
    <string-array name="video_keyframe_interval_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="video_bitrate">Video Bitrate</string>
    <string-array name="video_bitrate_list_titles">
        <item>300 kbps</item>
        <item>500 kbps</item>
        <item>600 kbps</item>
        <item>800 kbps</item>
        <item>1000 kbps</item>
    </string-array>
    <string-array name="video_bitrate_list_values">
        <item>300000</item>
        <item>500000</item>
        <item>600000</item>
        <item>800000</item>
        <item>1000000</item>
    </string-array>
    <string name="video_fps">Video FPS</string>
    <string-array name="video_fps_list_titles">
        <item>15 fps</item>
        <item>20 fps</item>
        <item>24 fps</item>
        <item>30 fps</item>
    </string-array>
    <string-array name="video_fps_list_values">
        <item>15</item>
        <item>20</item>
        <item>24</item>
        <item>30</item>
    </string-array>

    <string name="audio_settings">Audio Settings</string>
    <string name="audio_profile">Audio Profile</string>
    <string-array name="audio_profile_list_titles">
        <item>LCAAC</item>
        <item>HEAAC</item>
        <item>SPEEX</item>
    </string-array>
    <string-array name="audio_profile_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="audio_bitrate">Audio Bitrate</string>
    <string-array name="audio_bitrate_list_titles">
        <item>32 kbps</item>
        <item>64 kbps</item>
        <item>128 kbps</item>
        <item>192 kbps</item>
    </string-array>
    <string-array name="audio_bitrate_list_values">
        <item>32000</item>
        <item>64000</item>
        <item>128000</item>
        <item>192000</item>
    </string-array>

    <string name="audio_samplerate">Audio Samplerate</string>
    <string-array name="audio_samplerate_list_titles">
        <item>8kHz</item>
        <item>16kHz</item>
        <item>32kHz</item>
        <item>44.1kHz</item>
        <item>48kHz</item>
    </string-array>
    <string-array name="audio_samplerate_list_values">
        <item>8000</item>
        <item>16000</item>
        <item>32000</item>
        <item>44100</item>
        <item>48000</item>
    </string-array>

    <string name="advanced_features">Advanced Features</string>
    <string name="audio_denoise">Denoise</string>
    <string name="auto_hardware_acceleration">Auto Hardware Acceleration</string>
    <string name="smooth_skin_level">Smooth Skin Level</string>
    <string-array name="smooth_skin_level_list_titles">
        <item>off</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="smooth_skin_level_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="play_settings">Play Settings</string>
    <string name="play_start">Start Play</string>
    <string name="play_stop">Stop Play</string>
    <string name="buffertime">BufferTime</string>
    <string name="maxbuffertime">MaxBufferTime</string>
    <string name="video_scale_mode">Video Scale Mode</string>
    <string name="rtsp_transport">RTSP Transport</string>
    <string-array name="video_scale_mode_list_titles">
        <item>ScaleToFill</item>
        <item>ScaleAspectFit</item>
        <item>ScaleAspectFill</item>
    </string-array>
    <string-array name="video_scale_mode_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="rtsp_transport_titles">
        <item>UDP</item>
        <item>TCP</item>
        <item>HTTP</item>
    </string-array>
    <string-array name="rtsp_transport_values">
        <item>udp</item>
        <item>tcp</item>
        <item>http</item>
    </string-array>

</resources>
